--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,12 @@ on:
       - master
 
 jobs:
-  create_and_upload_deploy_sh:
+  create_upload_execute_deploy_sh:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-
+      
       - name: Create deploy.sh
         run: |
           echo "#!/bin/bash
@@ -23,16 +23,24 @@ jobs:
           npm run build
           php artisan migrate --force
           php artisan optimize
-          echo 'Deployment Finished'" > deploy.sh
-          
+          echo 'Deployment Finished'" > deploy.sh       
          
-      - name: Upload and Execute deploy.sh
-        uses: appleboy/ssh-action@v1.1.0
+      - name: Upload File
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
-          script: |
-            cp deploy.sh /home/ubuntu/
-            chmod +x deploy.sh
+          port: ${{ secrets.PORT }}
+          source: "deploy.sh"
+          target: "/home/ubuntu/deploy.sh"
+
+        - name: Execute File
+          uses: appleboy/ssh-action@v1.1.0
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            key: ${{ secrets.SSHKEY }}
+            script: |
+            chmod +x /home/ubuntu/deploy.sh
             cd /home/ubuntu/me && ./deploy.sh
