--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           echo "#!/bin/bash
           set -e
           echo 'Deployment Started...'
-          cd /var/www/html/laravel-todo/
+          cd /var/www/laravel-todo/
           git pull
           composer install
           npm install
